<resources>
    <string name="app_name">Mix-Tails</string>
    <string name="ques1">Don\'t know what to drink?</string>
    <string name="decideBtn">Let\'s decide!</string>
    <string name="sendButton">Let\'s Drink!</string>
    <string name="question1">Drink name</string>
    <string name="question2">What spirit?</string>
    <string name="question3">How does it taste?</string>
    <string name="question4">What size?</string>
    <string name="question5">How strong is it?</string>
    <string name="question7">What are the ingredients?</string>
    <string name="question8">Let\'s drink!</string>
    <string name="question9">Surprise me!</string>
    <string name="Img2">imgview</string>
    <string name="passwordConfirm">Confirm your password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="confirmBtn">Confirm</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log Out</string>
    <string name="signup_confirmation_message">You have successfully signed up.</string>
    <string name="exploreBtn">Explore </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="let_s_drink_btn">Let\'s drink!</string>
    <string name="rectangle">rectangle</string>
    <string name="Choose_one">Choose-one</string>
    <string name="imgViewContentDescription">contentDescription</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="welcome_question">Good Day! Do you feel like cocktail today?</string>
    <string name="imgViewContentDesscription">Content Description</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="welcome_textView">TextView</string>
    <string name="menu_bar">menu</string>
    <string name="add_to_favorite">cart</string>
    <string name="drinkName2">drink 2</string>
    <string name="drinkName1">drink 1</string>
    <string name="drinkName3">drink 3</string>
    <string name="recommended_drinks_text">Recommended Drinks</string>
    <string name="drinkName4">drink 4</string>
    <string name="ingredients_list">ingredients list</string>
    <string name="my_favorites_text">My favorites</string>
    <string name="welcome_back_text">WELCOME BACK</string>
    <string name="i_want_to_drive">I want to drive</string>
    <string name="surprise_drink_text">Picked For You</string>
    <string name="driving_wait1">Sorry! You can\'t drive just yet :(</string>
    <string name="recommendationBtn_text">My Recommendation</string>
    <string name="choose_drink_text">Choose a drink</string>
    <string name="randomize_text">Randomize</string>
    <string name="add_drink">Add</string>
    <string name="drink_added_confirmation">Your Drink has been successfully added</string>
    <string name="add_a_new_drink">Add a new drink</string>
    <string name="ingredients">Ingredients</string>
    <string name="limitDefault">How many drinks you want to take today?</string>
    <string name="setLimit">Set Limit!</string>
    <string name="see_ingredients">See Ingredients</string>
    <string name="waiting_to_drive_text">You still have to wait</string>
    <string name="go_back_text">Go Back</string>
    <string name="drink_name_text">Drink Name</string>
    <string name="fuelBarText">Your Fuel Bar</string>
    <string name="fuel_progress_text">3</string>
    <string name="reset_bar">Reset bar</string>

    <string name="drink_me">Drink me!</string>
    <string name="fuel_text_1">You don\'t need to count drinks</string>
    <string name="fuel_text_2">Be careful! But, let\'s go!</string>
    <string name="fuel_text3">You are having a fun night!</string>
    <string name="fuel_text4">We are going for few, but end up with more!</string>
    <string name="fuel_text5">Grabbing a few with homies!</string>
    <string name="fuel_text6">Good time for relax!</string>
    <string name="fuel_text7">Okay... Why do you need this app?</string>
    <string name="wecome_back_text">\ Welcome back \</string>


</resources>
