<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".SignInActivity">
<!--Sign in activity xml-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="278dp"
        android:layout_height="277dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        app:srcCompat="@drawable/group_glass"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="394dp"
        android:layout_height="377dp"
        android:background="@drawable/signup_frame"
        android:backgroundTint="#faf8f9"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/maintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_in_text"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="28sp" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="536dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="605dp" />

        <Button
            android:id="@+id/loginConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="105dp"
            android:background="@drawable/signup_btn_bg"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/action_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>