<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf8f9"
    tools:context=".SplashScreen">
    <!--This UI activity is for the home screen displayed including menu image button, log out button,
    and the three buttons leadings to various functionalities-->
    <ImageButton
        android:id="@+id/menuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="#F8CAC6"
        android:contentDescription="@string/menu_bar"
        app:layout_constraintBottom_toTopOf="@+id/welcomeBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <ImageView
        android:id="@+id/frame"
        android:layout_width="248dp"
        android:layout_height="240dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/circle"
        android:backgroundTint="#fb9c85"
        android:contentDescription="@string/imgViewContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/welcomeBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome_back_text"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/recommendBtn"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:background="@drawable/decide_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/recommendationBtn_text"
        android:textColor="#ffffff"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/decideBtn"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:background="@drawable/decide_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/choose_drink_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <Button
        android:id="@+id/myfavoriteBtn"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:background="@drawable/decide_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/my_favorites_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <ImageView
        android:id="@+id/cocktail_group"
        android:layout_width="181dp"
        android:layout_height="158dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315"
        app:srcCompat="@drawable/cheers4"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/logOut"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:background="@drawable/log_out"
        android:contentDescription="@string/imgViewContentDesscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>