<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_background"
    tools:context=".ui.login.LoginActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="241dp"
        android:layout_height="0dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="67dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teamwork"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="373dp"
        android:layout_height="407dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/signup_frame"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">
        <TextView
            android:id="@+id/maintext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/cabin_semibold"
            android:text="@string/sign_in_text"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="28sp" />
        <EditText
            android:id="@+id/username"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"
            android:selectAllOnFocus="true"
            android:textColor="#fff"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="536dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"
            android:selectAllOnFocus="true"
            android:textColor="#fff"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="605dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="150dp"
            android:background="@drawable/signup_btn_bg"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="686dp" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>