<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf8f9"
    tools:context=".AppLaunching">


    <ImageView
        android:id="@+id/frame"
        android:layout_width="248dp"
        android:layout_height="240dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="342dp"
        android:background="@drawable/circle"
        android:backgroundTint="#fb9c85"
        android:contentDescription="@string/imgViewContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome_back_text"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/recommendBtn"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/decide_btn"
        android:fontFamily="@font/roboto_bold"
        android:onClick="decide"
        android:text="@string/recommendationBtn_text"
        android:textColor="#ffffff"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/myfavoriteBtn"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/decide_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/my_favorites_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <Button
        android:id="@+id/drivingBtn"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/decide_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/i_want_to_drive"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/cocktail_group"
        android:layout_width="181dp"
        android:layout_height="158dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        app:srcCompat="@drawable/cheers4"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>