<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ques1"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="288dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/confused_glass"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/decideBtn"
        android:layout_width="123dp"
        android:layout_height="53dp"
        android:background="@drawable/decide_btn"
        android:fontFamily="@font/roboto_medium"
        android:onClick="decide"
        android:text="@string/decideBtn"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="OnClick" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="443dp"
        android:layout_height="640dp"
        android:contentDescription="@string/imgViewContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/rectangle" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#E4992B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#E4992B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/decideBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>