<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    android:layout_margin="8dp">
    <!--This is the activity to display an item when the search bar is used-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:background="@color/egg_shell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/cocktail"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/imgViewContentDesscription" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="9"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/text_color2"
                    android:text="@string/drinkName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/carrot2"
                    android:text="@string/question4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

</androidx.cardview.widget.CardView>